[gd_scene load_steps=4 format=3 uid="uid://brxd4ea5dq2ax"]

[ext_resource type="Script" uid="uid://tswfp3qvsl08" path="res://prefabs/tools/dialogue_editor/dialogue_item_editor/dialogue_choices_editor/choice_editor/choice_editor.gd" id="1_e28yw"]
[ext_resource type="PackedScene" uid="uid://djat5vf5bcbma" path="res://prefabs/ui/sfx_check_button.tscn" id="2_a2fu7"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="2_kc4af"]

[node name="ChoiceEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e28yw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceLabelControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_right = 420.0
offset_bottom = 32.0
mouse_filter = 2

[node name="ControlLabel" type="RichTextLabel" parent="Panel/ChoiceLabelControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 236.0
offset_bottom = 11.0
grow_vertical = 2
mouse_filter = 2
text = "Choice Button Label"

[node name="ChoiceLabel" type="LineEdit" parent="Panel/ChoiceLabelControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -14.333334
offset_bottom = 14.333332
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Required"

[node name="IsDeclineChoiceControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_top = 37.0
offset_right = 420.0
offset_bottom = 69.0
mouse_filter = 2

[node name="ControlLabel" type="RichTextLabel" parent="Panel/IsDeclineChoiceControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 236.0
offset_bottom = 11.0
grow_vertical = 2
mouse_filter = 2
text = "Is Decline Choice"

[node name="IsDeclineChoice" parent="Panel/IsDeclineChoiceControl" instance=ExtResource("2_a2fu7")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2

[node name="RepeatsItemControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_top = 67.0
offset_right = 420.0
offset_bottom = 99.0
mouse_filter = 2

[node name="ControlLabel" type="RichTextLabel" parent="Panel/RepeatsItemControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 236.0
offset_bottom = 11.0
grow_vertical = 2
mouse_filter = 2
text = "Repeats DialogueItem"

[node name="RepeatsItem" parent="Panel/RepeatsItemControl" instance=ExtResource("2_a2fu7")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2

[node name="LeadsToControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_top = 107.0
offset_right = 420.0
offset_bottom = 157.0
mouse_filter = 2

[node name="ControlLabel" type="RichTextLabel" parent="Panel/LeadsToControl"]
layout_mode = 1
offset_right = 110.0
offset_bottom = 22.0
mouse_filter = 2
text = "Leads To"

[node name="LeadsToButton" parent="Panel/LeadsToControl" instance=ExtResource("2_kc4af")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -29.0
grow_horizontal = 0
grow_vertical = 0
text = "(No Entry)"

[node name="TurnsInControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_top = 163.0
offset_right = 420.0
offset_bottom = 217.0
mouse_filter = 2

[node name="ControlLabel" type="RichTextLabel" parent="Panel/TurnsInControl"]
layout_mode = 1
offset_right = 220.0
offset_bottom = 22.0
mouse_filter = 2
text = "Turns In Quest Step"

[node name="TurnsInButton" parent="Panel/TurnsInControl" instance=ExtResource("2_kc4af")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -29.0
grow_horizontal = 0
grow_vertical = 0
text = "(Nothing)"

[node name="DeleteButton" parent="." instance=ExtResource("2_kc4af")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -29.0
offset_right = 37.0
grow_horizontal = 2
grow_vertical = 0
text = "Delete"

[connection signal="text_changed" from="Panel/ChoiceLabelControl/ChoiceLabel" to="." method="_on_choice_label_text_changed"]
[connection signal="toggled" from="Panel/IsDeclineChoiceControl/IsDeclineChoice" to="." method="_on_is_decline_choice_toggled"]
[connection signal="toggled" from="Panel/RepeatsItemControl/RepeatsItem" to="." method="_on_repeats_item_toggled"]
[connection signal="pressed" from="Panel/LeadsToControl/LeadsToButton" to="." method="_on_leads_to_button_pressed"]
[connection signal="pressed" from="Panel/TurnsInControl/TurnsInButton" to="." method="_on_turns_in_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
